2021-05-30  Darin Adler  <darin@apple.com>

        Remove WTF::Optional synonym for std::optional, using that class template directly instead
        https://bugs.webkit.org/show_bug.cgi?id=226433

        Reviewed by Chris Dumez.

        * WebCoreSupport/WebChromeClientIOS.h: Let the do-webcore-rename script rename
        Optional<> to std::optional<>.

2021-05-21  Chris Dumez  <cdumez@apple.com>

        Stop using holdLock() in WebKit/WebKitLegacy/Tools as it is not compatible with Clang thread safety analysis
        https://bugs.webkit.org/show_bug.cgi?id=226127

        Reviewed by Alex Christensen.

        * WebCoreSupport/WebFixedPositionContent.mm:
        (-[WebFixedPositionContent scrollOrZoomChanged:]):
        (-[WebFixedPositionContent overflowScrollPositionForLayer:changedTo:]):
        (-[WebFixedPositionContent setViewportConstrainedLayers:stickyContainerMap:]):
        (-[WebFixedPositionContent hasFixedOrStickyPositionLayers]):

2021-05-10  Wenson Hsieh  <wenson_hsieh@apple.com>

        Make WebCore::HitTestRequest::RequestType an enum class
        https://bugs.webkit.org/show_bug.cgi?id=225597

        Reviewed by Sam Weinig.

        See WebCore/ChangeLog for more details.

        * WebCoreSupport/WebFrameIOS.mm:
        (-[WebFrame elementRectAtPoint:]):

2021-04-20  Wenson Hsieh  <wenson_hsieh@apple.com>

        Rename WebCore::SelectionRect to WebCore::SelectionGeometry
        https://bugs.webkit.org/show_bug.cgi?id=224820

        Reviewed by Megan Gardner.

        * WebCoreSupport/WebFrameIOS.mm:
        (-[WebFrame selectionRectsForCoreRange:]):

2021-03-10  Chris Dumez  <cdumez@apple.com>

        Use RetainPtr<> / OSObjectPtr<> more in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=223030

        Reviewed by Darin Adler.

        * WebView/WebPDFViewIOS.mm:
        (createCGColorWithDeviceWhite):
        (+[WebPDFView shadowColor]):
        (+[WebPDFView backgroundColor]):

2021-03-05  Chris Dumez  <cdumez@apple.com>
